--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/mathjax": "^0.0.40",
     "@types/node": "^22.7.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
